--- a/Application/build.gradle
+++ b/Application/build.gradle
@@ -15,9 +15,9 @@ repositories {
 }
 
 dependencies {
-    compile "com.android.support:support-v4:21.0.2"
-    compile "com.android.support:gridlayout-v7:21.0.2"
-    compile "com.android.support:cardview-v7:21.0.2"
+    compile 'com.android.support:support-v4:21.0.2'
+    compile 'com.android.support:gridlayout-v7:21.0.2'
+    compile 'com.android.support:cardview-v7:21.0.2'
 }
 
 // The sample build uses multiple directories to
@@ -31,12 +31,10 @@ List<String> dirs = [
 android {
     compileSdkVersion 21
     buildToolsVersion "21.1.2"
-
     defaultConfig {
-        minSdkVersion 11
+        minSdkVersion 14
         targetSdkVersion 21
     }
-
     sourceSets {
         main {
             dirs.each { dir ->
@@ -48,7 +46,8 @@ android {
         androidTest.java.srcDirs = ['tests/src']
 
     }
-
+    productFlavors {
+    }
 }
 
 
