--- a/Application/build.gradle
+++ b/Application/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     compile 'com.android.support:support-v4:21.0.2'
     compile 'com.android.support:gridlayout-v7:21.0.2'
     compile 'com.android.support:cardview-v7:21.0.2'
+    compile 'com.android.support:recyclerview-v7:21.0.+'
 }
 
 // The sample build uses multiple directories to
