--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Apr 20 20:56:54 EEST 2015
-sdk.dir=C\:\\Users\\joona\\AppData\\Local\\Android\\sdk
+#Thu Apr 23 17:28:50 EEST 2015
+sdk.dir=D\:\\Apps\\AndroidSDK
