--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Apr 23 18:17:47 EEST 2015
-sdk.dir=C\:\\Users\\joona\\AppData\\Local\\Android\\sdk
+#Fri May 01 22:48:32 EEST 2015
+sdk.dir=C\:\\Users\\Samuli\\AppData\\Local\\Android\\sdk
