--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri May 01 22:48:32 EEST 2015
-sdk.dir=C\:\\Users\\Samuli\\AppData\\Local\\Android\\sdk
+#Mon May 04 16:10:36 EEST 2015
+sdk.dir=D\:\\Apps\\AndroidSDK
