--- a/Application/src/main/AndroidManifest.xml
+++ b/Application/src/main/AndroidManifest.xml
@@ -28,21 +28,24 @@
         android:allowBackup="true"
         android:icon="@drawable/sahko_icon"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.Holo.Light.DarkActionBar" >
+        android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
+        >
 
         <!-- This is a standard Activity invocation for MainActivity. -->
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="landscape"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".PiirustuksetOhjeetActivity"
-            android:label="@string/title_activity_piirustukset_ohjeet" >
+            android:label="@string/title_activity_piirustukset_ohjeet"
+            android:screenOrientation="landscape">
         </activity>
     </application>
 
