--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue May 05 10:44:37 EEST 2015
-sdk.dir=C\:\\Users\\Samuli\\AppData\\Local\\Android\\sdk
+#Tue May 05 20:19:04 EEST 2015
+sdk.dir=D\:\\Apps\\AndroidSDK
