--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu May 14 18:09:00 EEST 2015
-sdk.dir=C\:\\Users\\Samuli\\AppData\\Local\\Android\\sdk
+#Thu May 14 20:06:26 EEST 2015
+sdk.dir=D\:\\Apps\\AndroidSDK
