--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu May 14 22:42:57 EEST 2015
-sdk.dir=C\:\\Users\\Samuli\\AppData\\Local\\Android\\sdk
+#Fri May 15 12:47:40 EEST 2015
+sdk.dir=D\:\\Apps\\AndroidSDK
